--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ plotly = "^5.20.0"
 requests = "^2.31.0"
 
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.4.10"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
