--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,21 @@
-[tool.poetry]
+[project]
 name = "data-viz"
+requires-python = ">=3.10"
 version = "0.1.0"
 description = "Data Visualization Projects"
-authors = ["Nabil Khalil <nabilamirkhalil@gmail.com>"]
+authors = [{ name = "Nabil Khalil", email = "nabilamirkhalil@gmail.com" }]
 readme = "README.md"
 packages = [{ include = "data_viz", from = "src" }]
 
-[tool.poetry.dependencies]
-python = "^3.12"
-matplotlib = "^3.8.4"
-pandas = "^2.2.1"
-plotly = "^5.20.0"
-requests = "^2.31.0"
+dependencies = [
+    "matplotlib (>=3.10.0,<4.0.0)",
+    "pandas (>=2.2.3,<3.0.0)",
+    "plotly (>=6.0.0,<7.0.0)",
+    "requests (>=2.32.3,<3.0.0)"
+]
 
-
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.4.10"
+[tool.poetry.group.test.dependencies]
+ruff = ">=0.9"
 
 [build-system]
 requires = ["poetry-core"]
