--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "data-viz"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 version = "0.1.0"
 description = "Data Visualization Projects"
 authors = [{ name = "Nabil Khalil", email = "nabilamirkhalil@gmail.com" }]
@@ -9,6 +9,7 @@ packages = [{ include = "data_viz", from = "src" }]
 
 dependencies = [
     "matplotlib (>=3.10.0,<4.0.0)",
+    "numpy (>=2.3.2,<3.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
     "plotly (>=6.0.0,<7.0.0)",
     "requests (>=2.32.3,<3.0.0)"
